--- a/style.css
+++ b/style.css
@@ -6,20 +6,25 @@ body{
 	overflow: hidden;
 }
 
+.button-back{
+	background-color: white;
+	color: black;
+	border: 1px solid black;
+	border-radius: 50%;
+	height: 50px;
+	width: 50px;
+	position: absolute;
+	top: 5%;
+	left: 3%;
+	font-size: 30px;
+}
+
 #mainScreenContainer{
 	height: 100vh;
 	width: 100%;
 	
 }
 
-.atras{
-	border-radius: 10%;
-	margin-left: 600px;
-	margin-top: 100px;
-	width: 300px;
-	height: 100px;
-	
-}
 #divPlay{
 	position: absolute;
 	overflow: hidden;
@@ -453,12 +458,13 @@ h1{
     margin: 0 auto;
     overflow: hidden;
     border-radius: 16px;
-    margin-top: 2em;
+    margin-top: 3em;
 	
     }
 
 #pasearAtras{
-	margin-top: 20px;
+	background-color: white;
+	color: black;
 }
 
 #cielo{
@@ -573,7 +579,7 @@ h1{
 	align-items: center;
 	margin: 0;
 	min-width: 320px;
-	height: 83vh;
+	height: 100vh;
 }
  #divDormir {
 	display: none;
